--- a/sections/navbar.liquid
+++ b/sections/navbar.liquid
@@ -82,6 +82,32 @@
           </div>
         </div>
       </div>
+
+      <div
+        x-show="searchBarOpen"
+        @click.away="searchBarOpen = false"
+        class="w-full absolute z-99 top-0 bg-white shadow-md"
+      >
+        <button type="button" x-on:click="searchBarOpen = false" class="absolute top-0 right-0 mr-5 mt-5 text-gray-500">
+          {% render 'icon-close' %}
+        </button>
+        <div class="h-40 flex justify-center items-center">
+          <form action="{{ routes.search_url }}" method="get" class="flex-auto px-4">
+            <div class="relative text-gray-500 px-10 border w-full">
+              <input
+                type="search"
+                name="q"
+                x-on:enter="searchBarOpen = false"
+                placeholder="Search"
+                class="w-full bg-white h-10 px-5 pr-10 rounded-full text-sm focus:outline-none"
+              >
+              <button type="submit" class="absolute right-0 top-0 mt-2 mr-2 md:mr-20">
+                {% render 'icon-search' %}
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
