--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -15,12 +15,13 @@
       rel="stylesheet"
     >
     <!-- Header hook for plugins -->
+    <link rel="stylesheet" href="https://cdn.shopify.com/shopifycloud/model-viewer-ui/assets/v1.0/model-viewer-ui.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
+
     {{ 'theme.css' | asset_url | stylesheet_tag }}
 
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
-
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css">
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js" async></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js" defer></script>
 
     <style>
       [x-cloak] {
