update: updated readme and some ui fix

--- a/sections/navbar.liquid
+++ b/sections/navbar.liquid
@@ -93,7 +93,8 @@
         </button>
         <div class="h-40 flex justify-center items-center">
           <form action="{{ routes.search_url }}" method="get" class="flex-auto px-4">
-            <div class="relative text-gray-500 px-10 border w-full">
+            <h1 class="text-xl font-bold mb-2">Search Results</h1>
+            <div class="relative text-gray-500 px-6 border w-full">
               <input
                 type="search"
                 name="q"
