--- a/assets/theme.css
+++ b/assets/theme.css
@@ -560,12 +560,6 @@
   .left-1\/2 {
     left: calc(1/2 * 100%);
   }
-  .left-9 {
-    left: calc(var(--spacing) * 9);
-  }
-  .z-1 {
-    z-index: 1;
-  }
   .z-10 {
     z-index: 10;
   }
@@ -771,9 +765,6 @@
   .h-screen {
     height: 100vh;
   }
-  .max-h-50 {
-    max-height: calc(var(--spacing) * 50);
-  }
   .min-h-30 {
     min-height: calc(var(--spacing) * 30);
   }
@@ -785,9 +776,6 @@
   }
   .min-h-80 {
     min-height: calc(var(--spacing) * 80);
-  }
-  .min-h-100 {
-    min-height: calc(var(--spacing) * 100);
   }
   .min-h-\[500px\] {
     min-height: 500px;
@@ -842,9 +830,6 @@
   }
   .max-w-30 {
     max-width: calc(var(--spacing) * 30);
-  }
-  .max-w-50 {
-    max-width: calc(var(--spacing) * 50);
   }
   .max-w-md {
     max-width: var(--container-md);
@@ -1038,9 +1023,6 @@
   .border-black {
     border-color: var(--color-black);
   }
-  .border-gray-100 {
-    border-color: var(--color-gray-100);
-  }
   .border-gray-200 {
     border-color: var(--color-gray-200);
   }
@@ -1139,9 +1121,6 @@
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
-  }
-  .px-10 {
-    padding-inline: calc(var(--spacing) * 10);
   }
   .py-0 {
     padding-block: calc(var(--spacing) * 0);
@@ -1677,6 +1656,9 @@
   background: url("./bg-curve.svg") no-repeat;
   background-position: bottom;
   background-size: cover;
+}
+input[type="search"]::-webkit-search-cancel-button {
+  display: none;
 }
 @keyframes spin {
   to {
