--- a/sections/navbar.liquid
+++ b/sections/navbar.liquid
@@ -29,7 +29,12 @@
         >
           {% render 'icon-search' %}
         </button>
-        <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900">
+        <a href="{{ routes.cart_url }}" class="whitespace-nowrap text-base text-gray-500 hover:text-gray-900 relative">
+          {% if cart.item_count > 0 %}
+            <span class="absolute z-2 -bottom-1 right-0 h-4 w-4 text-[8px] text-white rounded-full bg-red-500 p-1 text-center font-medium">
+              {{- cart.item_count -}}
+            </span>
+          {% endif %}
           {% render 'icon-shopping-bag' %}
         </a>
 
